# ai-fund-manager

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
.github/workflows/: deploy-pi.yml
config/: config.yaml  config_claude.yaml  config_global.yaml  mandate.md  mandate_global.md  universe.csv  universe_global.csv
deploy/: BACKUP.md  SETUP.md  backup.sh  cron.example  deploy.sh  fundmgr-bot.service  fundmgr-global-web.service  fundmgr-web.service  poll-deploy.sh
docs/: MONITORING.md  ROADMAP.md
scripts/: build_global_universe.py  sync_universe_from_financedata.py  try_ocr.py  verify_tickers.py
src/fundmgr/: cli.py  config.py  paper.py
src/fundmgr/data/: benchmark.py  fundamentals.py  fx.py  macro_context.py  market_hours.py  news.py  prices.py  quotes.py  screener.py  universe_selection.py
src/fundmgr/engine/: auto_fill.py  client.py  dspy_program.py  evaluator.py  optimizer.py  prompt.py  schema.py  stop_review.py
src/fundmgr/guardrails/: rules.py
src/fundmgr/notify/: send.py  telegram_bot.py
src/fundmgr/reporting/: actions.py  dashboard.py
src/fundmgr/state/: models.py  store.py
src/fundmgr/web/: app.py  paper.py  sim.py  views.py
src/fundmgr/web/templates/: base.html  history.html  index.html  learnings.html  live.html  paper.html  prompt.html  transactions.html  universe.html
tests/: test_client_reasoning.py  test_evaluator.py  test_fee.py  test_guardrails.py  test_ocr_fill.py  test_optimizer.py  test_paper.py  test_reconcile.py  test_state.py  test_universe_selection.py  test_web_views.py
tests/fixtures/: fable_prose_portfolio.txt  json_portfolio.json
tools/: discover_tickers.py
