[project]
name = "ai-fund-manager"
version = "0.1.0"
description = "LLM-driven discretionary fund manager for Nordic equities"
requires-python = ">=3.11"
dependencies = [
    # LLM providers
    "openai>=1.30",
    "anthropic>=0.25",
    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Data
    "pandas>=2.0",
    "yfinance>=0.2.40",
    "feedparser>=6.0",
    "requests>=2.31",
    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # CLI
    "click>=8.1",
    # Web dashboard
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",  # FastAPI Form() parsing (paper portfolio create)
    "plotly>=5.22",
    "httpx>=0.27",
    # Telegram notifications
    "python-telegram-bot>=20.7",
    # Screenshot OCR for fill extraction
    "pytesseract>=0.3",
    "Pillow>=10.0",
    # Scheduling
    "apscheduler>=3.10",
    # Sentiment (FinBERT) — CPU-only; install torch separately on Pi
    "transformers>=4.40",
    "scipy>=1.13",
    "exchange-calendars>=4.13.2",
    "financedata",
]

[project.optional-dependencies]
torch = [
    "torch>=2.2",        # install separately: pip install torch --index-url https://download.pytorch.org/whl/cpu
]
optimize = [
    "dspy>=2.6",         # MIPROv2 prompt optimization (fund optimize)
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
fund = "fundmgr.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fundmgr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
financedata = { path = "../FinanceData", editable = true }
